# PowerEye_2

./: .gitignore  .pre-commit-config.yaml  main.py  pre-commit  pyproject.toml
Etc/: .black  .flake8  isort.cfg  mypy.ini
Src/Icons/: __init__.py
Src/Style/: stylesheet.py
Src/Styles/: stylesheet.py
etc/conf/: .flake8
src/icons/: __init__.py
src/styles/: __init__.py  style.css  style_constants.py  stylesheet.py
src/styles/components/widgets/: __init__.py
src/styles/components/widgets/buttons/: __init__.py
src/styles/components/widgets/buttons/close_button/: __init__.py  object.py  template.py
src/styles/components/widgets/buttons/left_menu_buttons/: __init__.py  object.py  style.css  template.py
src/styles/components/widgets/buttons/left_menu_over_buttons/: __init__.py  object.py
src/styles/components/widgets/buttons/pop_up_close_button/: __init__.py  object.py  template.py
src/styles/components/widgets/buttons/popup/: __init__.py
src/styles/components/widgets/buttons/window_control_button/: __init__.py  object.py
src/styles/components/widgets/checkboxes/base/: __init__.py  object.py  style.css
src/styles/components/widgets/combo_boxes/: __init__.py
src/styles/components/widgets/combo_boxes/dim_combo_box/: __init__.py  object.py  style.css
src/styles/components/widgets/comboboxes/: __init__.py
src/styles/components/widgets/comboboxes/dimensional_combobox/: __init__.py  object.py  style.css
src/styles/components/widgets/labels/: __init__.py
src/styles/components/widgets/labels/base/: __init__.py  object.py  style.css  template.py
src/styles/components/widgets/labels/base_image_label/: __init__.py  object.py  style.css
src/styles/components/widgets/labels/dim_label/: __init__.py  object.py
src/styles/components/widgets/labels/dimensional_label/: __init__.py  object.py  style.css
src/styles/components/widgets/labels/header_label/: __init__.py  object.py  style.css
src/styles/components/widgets/labels/popup/: __init__.py
src/styles/components/widgets/layouts/: __init__.py
src/styles/components/widgets/layouts/header/: __init__.py  object.py  style.css
src/styles/components/widgets/layouts/header_buttons_layout/: __init__.py  object.py  style.css
src/styles/components/widgets/layouts/header_logo_layout/: __init__.py  object.py  style.css
src/styles/components/widgets/layouts/left_menu/: __init__.py  object.py  style.css  template.py
src/styles/components/widgets/line_edit/: __init__.py
src/styles/components/widgets/pop_up/: __init__.py  object.py  template.py
src/styles/components/windows/: __init__.py
src/styles/components/windows/main_window/: __init__.py  object.py  style.css  template.py
src/styles/components/windows/pop_up/: __init__.py  object.py  style.css
src/styles/components/windows/popup/: style.css
(+56 files in other folders)
