[tool.poetry]
name = "powereye-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pyside6 = "^6.6.1"
black = "^23.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
isort = "^5.13.1"
pep8-naming = "^0.13.3"

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
skip = ["__init__.py"]

[tool.black]
line-length = 79
exclude = '''
    venv/
    Tests/
'''

[flake8]
exclude = [".git", "__pycache__", "venv", "__init__.py"]
ignore = ["E203", "E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
