[tool.poetry]
name = "powereye-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pyside6 = "^6.6.1"
black = "^23.12.0"
pre-commit = "^3.6.0"
isort = "^5.13.1"
pep8-naming = "^0.13.3"
flake8 = "^6.1.0"

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
skip = ["__init__.py"]

[tool.black]
line-length = 79
exclude = '''venv/, Tests/'''

[tools.mypy]
ignore_missing_imports = ["True"]
warn_unreachable = ["True"]
disallow_untyped_defs = ["True"]
warn_return_any = ["True"]


[build-system]
requires = ["poetry-core", "isort", "black", "flake8"]
build-backend = "poetry.core.masonry.api"
